--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Specialities</h2>
-                    <h3 class="section-subheading text-muted">Solving complex isses and debugging</h3>
+                    <h3 class="section-subheading text-muted">Solving complex issues and debugging</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -239,8 +239,8 @@
     <script src="./js/ca-gallery.js "></script>
     <script src="./js/offCanvas.js "></script>
     <script src="./js/main.js "></script>
-    <script src="js/resume-service.js"></script>
-    <script src="js/resume-controller.js"></script>
+    <script src="./js/resume-service.js"></script>
+    <script src="./js/resume-controller.js"></script>
 
 
 </body>
